infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eduhamuy-shared-gateway
  namespace: eduhamuy-gateway
spec:
  gatewayClassName: approuting-istio

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      hostname: "*.eduhamuy.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eduhamuy-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
