infrastructure/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: eduhamuy-shared-gateway
      namespace: eduhamuy-gateway
      sectionName: https

  hostnames:
    - argocd.eduhamuy.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
